# leap-project-template

./: .env.example.txt  .gitignore  Cargo.toml  Pack.toml  README.md  build.rs
resource/components/app/: app.js
resource/pages/: index.hbs
resource/styles/default/: theme.scss
src/: main.rs
